[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webxray"
version = "1.1.0"
description = "Offensive web scanner: crawling, XSS, SQLi, headers and WAF bypass"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "theoffsecgirl", email = "info@theoffsecgirl.com" }]
keywords = ["security", "bug-bounty", "xss", "sqli", "pentesting", "web-security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Topic :: Security",
]
requires-python = ">=3.8"
dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml",
    "termcolor",
    "tqdm",
]

[project.scripts]
webxray = "webxray:main"

[project.urls]
Homepage = "https://github.com/theoffsecgirl/webxray"
Repository = "https://github.com/theoffsecgirl/webxray"
"Bug Tracker" = "https://github.com/theoffsecgirl/webxray/issues"

[tool.ruff]
line-length = 120
target-version = "py38"
